--- a/_shared/styles/web-fundamentals.css
+++ b/_shared/styles/web-fundamentals.css
@@ -140,6 +140,7 @@ nav ol li:before {
   color: var(--accent);
 }
 .shower > section h3 {
+  margin-top: .5em;
   font-size: 1.2em;
   font-weight: bold;
 }
