--- a/_shared/styles/web-fundamentals.css
+++ b/_shared/styles/web-fundamentals.css
@@ -156,7 +156,7 @@ nav ol li:before {
 .shower > section a {
   color: var(--accent);
 }
-.shower > section a[href*="github.ugent.be"]:after {
+.shower > section a[href*="ugent.be"]:after {
   content: " 🔐";
 }
 .shower > section a:hover {
